[gd_scene load_steps=10 format=2]

[ext_resource path="res://scenes/Setup.gd" type="Script" id=1]
[ext_resource path="res://assets/AtkinsonHyperlegible-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/spy.png" type="Texture" id=3]
[ext_resource path="res://assets/virtual-marker.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=2]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=3]
default_font = SubResource( 2 )
LineEdit/fonts/font = SubResource( 2 )
SpinBox/icons/updown = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
size = 64
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=6]
default_font = SubResource( 5 )
OptionButton/fonts/font = SubResource( 5 )
OptionButton/icons/arrow = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 64
font_data = ExtResource( 2 )

[node name="Setup" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -192.0
margin_top = 64.0
margin_right = 192.0
margin_bottom = 448.0
texture = ExtResource( 3 )
expand = true

[node name="PlayerCount" type="Control" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -256.0
margin_bottom = -256.0

[node name="Label" type="Label" parent="PlayerCount"]
anchor_right = 1.0
margin_bottom = 30.0
grow_horizontal = 2
custom_fonts/font = SubResource( 2 )
text = "How many players are there?"
align = 1

[node name="Input" type="SpinBox" parent="PlayerCount"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -64.0
margin_top = 192.0
margin_right = 64.0
margin_bottom = 192.0
grow_horizontal = 2
theme = SubResource( 3 )
min_value = 1.0
max_value = 10.0
value = 1.0
allow_greater = true
align = 1

[node name="GameInfo" type="Control" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = 192.0
margin_bottom = 192.0

[node name="Label" type="Label" parent="GameInfo"]
anchor_right = 1.0
custom_fonts/font = SubResource( 2 )
text = "What are you playing?"
align = 1

[node name="Option" type="OptionButton" parent="GameInfo"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -128.0
margin_top = 192.0
margin_right = 128.0
margin_bottom = 10.0
grow_horizontal = 2
rect_min_size = Vector2( 640, 0 )
theme = SubResource( 6 )
custom_fonts/font = SubResource( 4 )
align = 1

[node name="Button" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_top = -96.0
margin_bottom = -96.0
grow_horizontal = 2
grow_vertical = 0
custom_fonts/font = SubResource( 2 )
disabled = true
text = "Begin Assignments"

[connection signal="value_changed" from="PlayerCount/Input" to="." method="_number_changed"]
[connection signal="pressed" from="Button" to="." method="_next_scene"]
